--- a/Assignment 1 - Sentiment Analysis/Assignment_1.ipynb
+++ b/Assignment 1 - Sentiment Analysis/Assignment_1.ipynb
@@ -14,9 +14,7 @@
       "source": [
         "Submitted By: \n",
         "\n",
-        "Anushka Deshpande \n",
-        "\n",
-        "USC ID: 5914802345"
+        "Anushka Deshpande \n"
       ],
       "metadata": {
         "id": "ykSuIMhgXmn2"
